[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Graphics/1bitplat_mono_trans_packed.png" type="Texture" id=1]
[ext_resource path="res://Objects/ExitDoor/ExitDoor.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[node name="ExitDoor" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -8 )
region_enabled = true
region_rect = Rect2( 288, 32, 16, 16 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
